Fix footer overlap.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,7 @@ html {
 
 body {
     /* Margin bottom by footer height */
-    margin-bottom: 140px;
+    margin-bottom: 140px !important;
 }
 
 .footer {
